# ai-eng-pi-1

./: .env.example  .gitignore  README.md  instrucciones.md  pyproject.toml  requirements.txt
logs/: log-2026-02-16 - mpv1 y gpt-4o-mini.txt  log-2026-02-16 - mpv2 y gpt-4o-mini.txt  log-2026-02-16 - mpv3 y gpt-4o-mini.txt  log-2026-02-16 - mvp3 y gpt-4o.txt  log-2026-02-16 - mvp3 y gpt-5o-mini.txt
metrics/: expected metrics.md  metrics.csv
prompts/: main_prompt v1.md  main_prompt v2.md  main_prompt.md  main_prompt.txt
reports/: PI_report_en.md
src/: agent.py  log.py  log_gen.py  main.ipynb
tests/: test_core.py
